fix lower prev/next bar spacing

--- a/sass/_settings.scss
+++ b/sass/_settings.scss
@@ -258,6 +258,11 @@ i.fa-arrow-left:hover{
   color: $primary-color; 
 }
 
+.pagdiv {
+  background-color: $secondary-color;
+  margin-top: -10px;
+}
+
 /* .spotlight {
   margin-top: 55px;
   background: #e7e7e7 url("../images/pattern-1.png");
